--- a/Project_IK.uproject
+++ b/Project_IK.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "Project_IK",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
