#44 - Successfully spawned actors.
DefaultEngine - Set BP_IKGameInstance to set hero&enemy blueprints.
IKGameInstance - Idk precisely, but Ctor is not called in BP. Thus, move them into Init function. Pass blueprints data to LevelTransitionanager.
 LevelTransitionManager - Spawned actors but in fixed location and rotation without saved data.

@@ Need to adjust actors location flexibly. Load saved data when new levels loaded.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GameInstanceClass=/Script/Project_IK.IKGameInstance
+GameInstanceClass=/Game/__BluePrints/BP_IKGameInstance.BP_IKGameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
